Website-Resume-Project/Website-Resume-Project/style.css
html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body {
    font-family: "Poppins", sans-serif;
    --color1: #FFF ;
    --color2: #000000 ;
}


/*BOX ARROW SCROLL DOWN*/
.box-arrow{
	position: absolute;
	top: 90%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.box-arrow span{
	display: block;
	width: 20px;
	height: 20px;
	border-bottom: 2px solid grey;
	border-right: 2px solid grey;
	transform: rotate(45deg);
	margin: -10px;
	animation: animate 2s infinite;
}

.box-arrow span:nth-child(2)
{
	animation-delay: -0.2s;
}

.box-arrow span:nth-child(3)
{
	animation-delay: -0.4s;
}

@keyframes animate{
	
	0%{
		opacity: 0;
		transform: rotate(45deg) translate(-20px, -20px);
	}
	50%{
		opacity: 1;
	}
	100%{
		opacity: 0;
		transform: rotate(45deg) translate(20px, 20px);
	}
}
/*BOX ARROW SCROLL DOWN*/

/*IMAGE DIVIDE DESIGN RENE PUNGARTNIK*/
#responsive-image {
  width: 100%;
  align-items: center;
  display: block;
 
}

#responsive-image2{
  width: 100%;
  align-items: center;
  display: block;
  margin-top: 10rem;
}

#responsive-image3{
  width: 100%;
  align-items: center;
  display: block;
  margin-top: 10rem;
}
/*IMAGE DIVIDE DESIGN RENE PUNGARTNIK*/

/*NAV BAR START------------------------------------------------------------------------------------------------------------------------------------*/
.nav-bar {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    position: fixed;
    background-color: var(--color2);
    padding: 12px 20px;
    z-index: 10;
}
.logo img {width: 40px;}
.menu {display: flex;}
.menu li {padding-left: 30px;}
.menu li a {
    display: inline-block;
    text-decoration: none;
    color: var(--color1);
    text-align: center;
    transition: 0.15s ease-in-out;
    position: relative;
    text-transform: uppercase;
}
.menu li a::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 0;
    height: 1px;
    background-color: var(--color1);
    transition: 0.15s ease-in-out;
}
.menu li a:hover:after {width: 100%;}
.open-menu , .close-menu {
    position: absolute;
    color: var(--color1);
    cursor: pointer;
    font-size: 1.5rem;
    display: none;
}
.open-menu {
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}
.close-menu {
    top: 20px;
    right: 20px;
}
#check {display: none;}
@media(max-width: 610px){
    .menu {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 80%;
        height: 100vh;
        position: fixed;
        top: 0;
        right: -100%;
        z-index: 100;
        background-color: var(--color2);
        transition: all 0.2s ease-in-out;
    }
    .menu li {margin-top: 40px;}
    .menu li a {padding: 10px;}
    .open-menu , .close-menu {display: block;}
    #check:checked ~ .menu {right: 0;}
}
/*NAV BAR END------------------------------------------------------------------------------------------------------------------------------------*/




/*ABOUT ME SECTION -----------------------------------------------------------------*/
#about-me-h1 {
    text-align: center;
    padding-top: 5rem;
    font-size: 7vw;
}

#introduction-text {
    text-align: center;
    padding-left: 2rem;
    padding-right: 2rem;
    padding-bottom: 5rem;
    padding-top: 1rem;
    font-size: 4vw;
}

#about-section {
    width: 100%;
}
/*PROJECTS SECTION ------------------------------------------------------------*/

#projects-h1 {
    text-align: center;
    padding-top: 5rem;
    padding-bottom: 3rem;
}

#projects-section {
    width: 100%;
}

#loading-animation{
    display: flex;
    height: 50vh;
    width: 100%;
    align-items: center;
    justify-content: center;
    background-image: url('https://github.com/RenePung/Website-Resume-Project/blob/main/Thumbnail%20Pictures/TradingViewProject%20Thumbnail.png?raw=true');

  background-size: cover;
  background-position: center;
  }

  #loading-animation .dots span{
    position: absolute;
    height: 10px;
    width: 10px;
    background: #fff;
    border-radius: 50%;
    transform: rotate(calc(var(--i) * (360deg / 15))) translateY(35px);
    animation: animate 1.5s linear infinite;
    animation-delay: calc(var(--i) * 0.1s);
    opacity: 0;
  }

  @keyframes animate {
   0%{
     opacity: 1;
   }
   100%{
     opacity: 0;
   }
  }


/*CERTIFICATES SECTION ---------------------------------------------------------*/

#certificates-h1 {
  text-align: center;
  padding-top: 2rem;
  margin-top: 5rem;
}  
  


.container-slider {
  width: 100%;
  background: #ffffff;
  display: flex;
  align-items: center;
  justify-content: center;
}

.swiper {
  width: 80%;
  height: fit-content
}
.swiper-slide img{
  width: 100%;
  padding-top: 30px;
}


.swiper {
  width: 800%;
  height: 80%;
}




/*LEARNING PATHS SECTION -------------------------------------------------------*/


#learning-paths-h1 {
  text-align: center;
  padding-top: 5rem;
  margin-top: 5rem;
}

/*LANGUAGES BAR TRACKER*/

.tracker {
  max-width: 400px;
  padding: 10px;
  border: 2px solid #333; /* Add a border around the tracker */
  border-radius: 10px; /* Add rounded corners to the border */
  justify-content: center;
  align-items: center;
  margin-left: 2%;
  margin-right: 2%;
  margin-top: 100px;
}

#languages-h2 {
  font-size: 1em;
  padding-bottom: 6%;
}

.languages-list {
  list-style-type: none;
  padding-left: 0;
}

.language {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.language-name {
  flex: 1;
}

.language-bar {
  width: 240px;
  height: 15px;
  background-color: #bdbdbd;
  border-radius: 8px;
  margin: 0 10px;
  position: relative;
}

.language-progress {
  height: 100%;
  background-color: rgba(0, 68, 198, 0.76);
  border-radius: 8px;
}

.language-percentage {
  width: 40px;
  text-align: right;
}


/*CONTACTS SECTIONS -----------------------------------------------------------*/


.footer {
  display: flex;
  color: #fffefe;
  padding: 2rem 0;
  height: auto;
  justify-content: space-around;
  flex-wrap: wrap;
  background-color: #000000;
}

.box {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 20px;
}

.footer h2 {
  font-size: 1.3rem;
  margin-bottom: 1rem;
  font-weight: bold;
  padding-left: 1.8rem;
}

.links li {
  list-style: none;
  line-height: 30px;
  text-align: center;
  font-weight: 100;
  align-items: center;
  padding-right: 2rem;
}

.links li a {
  text-decoration: none;
  color: #fff;
}

.registration {
  display: flex;
  flex-direction: column;
}

.registration input {
  padding: 10px;
  font-weight: 100;
  border: none;
  outline: none;
  border-radius: 5px;
  text-align: center;
  font-size: 12px;
  margin: 1rem 0;
}

button {
  border: none;
  padding: 12px 0;
  border-radius: 30px;
  cursor: pointer;
}

.address {
  text-align: center;
  margin-bottom: 10px;
}

.social {
  display: flex;
  list-style: none;
  align-items: center;
}

.social li {
  margin: 0 8px;
  cursor: pointer;
  font-size: 25px;
  padding-right: 1.5rem;
}

#version {
  font-size: 2vw;
  padding-bottom: 1rem;
  align-items: center;
  
}

#h2-gmail {
  align-items: center;
  padding-right: 2rem;
}
#h2-contact {
  padding-right: 2rem;
}
#h2-menu {
  padding-right: 1.8rem;
}

/*CHART -----------------------------------------------------------------------*/
.chart-container {
  position: relative;
  align-items: center;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  height: 48vh;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  border: 2px solid rgba(0, 68, 198, 1);
  top: 3rem;
  margin-left: 2%;
  margin-right: 2%;
  border-radius: 10px;
}

#myChart {
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

#chart-button {
  position: relative;
  top: 3rem;
  width: 70px;
  height: 30px;
  border-radius: 5px;
  color: white;
  background-color: rgba(0, 68, 198, 1);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 3%;
}

#chart-button:hover {
  background-color: rgba(0, 68, 198, 0.76);
}






/*MEDIA QUERY PORTRAIT ----------------START------------------------*/

@media (min-width: px) {

}







/*MEDIA QUERY PORTRAIT ----------------END------------------------*/

